--- a/style.css
+++ b/style.css
@@ -1,1 +1,22 @@
-
+*{
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+      html, body{
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#0e2447+0,134d7c+100 */
+        background: #0e2447; /* Old browsers */
+        background: -moz-linear-gradient(top,  #0e2447 0%, #134d7c 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0e2447), color-stop(100%,#134d7c)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top,  #0e2447 0%,#134d7c 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top,  #0e2447 0%,#134d7c 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top,  #0e2447 0%,#134d7c 100%); /* IE10+ */
+        background: linear-gradient(to bottom,  #0e2447 0%,#134d7c 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e2447', endColorstr='#134d7c',GradientType=0 ); /* IE6-9 */
+        overflow: hidden;
+      }
+      canvas{
+        background-color: #0ecc0e;
+      }
