--- a/homepage-style.css
+++ b/homepage-style.css
@@ -3,8 +3,9 @@
   background-color: #333;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
-  width: 350px;
-  height: 75%;
+  width: 150px;
+  height: 750px;
+  border-radius: 0px 0px 5px 5px;
 }
 
 /* Links inside the navbar */
@@ -12,7 +13,6 @@
   float: left;
   display: block;
   color: #f2f2f2;
-  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
@@ -27,3 +27,4 @@
 .main {
   margin-top: 30px; /* Add a top margin to avoid content overlay */
 }
+
