--- a/homepage-style.css
+++ b/homepage-style.css
@@ -3,8 +3,11 @@
   background-color: #333;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
-  width: 150px;
+  width: 170px;
   border-radius: 0px 0px 5px 5px;
+  display: flex;
+  flex-direction: column;
+  min-height: 150px;
 }
 
 /* Links inside the navbar */
