--- a/particles.css
+++ b/particles.css
@@ -12,3 +12,18 @@
       canvas{
         background-color: #0ecc0e;
       }
+.home_button{
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #333;
+        display: block;
+        width: 130px;
+        height: 75px;
+}
+.home_button a{
+        text-deoration: none;
+}
+.home_button a:hover{
+        text-deoration: underline;
+}
