--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
     font-weight: bold;
     font-family: "Lucida Console", Arial, Sans-serif;
     font-size: 2.5em;
+    text-align: center;
+    margin: 0.2em;
 }
 a {
     color: #3498db;
