--- a/NASA/style.css
+++ b/NASA/style.css
@@ -13,3 +13,13 @@
 	text-align: center;
 	font-size: 40px;
 }
+a {
+    font-size 2.45em;
+    margin: 0.2em;
+    color: #3498db;
+    cursor: grab;
+}
+a:hover {
+    color: #2980b9;
+    cursor: grabbing;
+} 
