--- a/NASA/style.css
+++ b/NASA/style.css
@@ -14,10 +14,12 @@
 	font-size: 40px;
 }
 a {
+    font-family: "Lucida Console", Arial, Sans-serif;
     font-size 2.45em;
     margin: 0.2em;
     color: #3498db;
     cursor: grab;
+    font-weight: bold;
 }
 a:hover {
     color: #2980b9;
