--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@ body {
     font-family: "Lucida Console", Arial, Sans-serif;
     font-size: 2.45em;
     text-align: center;
-    margin: 0.2em;
+    padding: 0.2em;
+    margin: 0;
+    border: 0;
+    border-bottom: 2px solid #ecf0f1;
 }
 a {
     color: #3498db;
