--- a/NASA/style.css
+++ b/NASA/style.css
@@ -15,7 +15,7 @@
 }
 a {
     font-family: "Lucida Console", Arial, Sans-serif;
-    font-size 2.45em;
+    font-size: 2.45em;
     margin: 0.2em;
     color: #3498db;
     cursor: grab;
