--- a/MEMES/style.css
+++ b/MEMES/style.css
@@ -1,3 +1,7 @@
+#memeImg {
+  border: 0.02em dotted pink;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
