--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
     width: 100%;
 }
 .banner {
+    possition: absolute;
+    bottom: 0px;
     color: white;
     background-color: #e74c3c;
     font-weight: bold;
@@ -24,7 +26,6 @@ body {
     border-bottom: 2px solid #ecf0f1;
     cursor: grab;
     padding-right: 0;
-    bottom: 0.01em;
 }
 a {
     color: #3498db;
