--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+:root {
+  --primary-color: #121212;
+  --secondary-color: #0be369;
+  --bg-color: #FFFFFF;
+}
+[data-theme="dark"] {
+  --primary-color: #FFFFFF;
+  --secondary-color: #74499c;
+  --bg-color: #121212;
+}
 html, body {
 	width: 100%;
 	height: 100%;
@@ -86,4 +96,70 @@ p {
 .secret-text:hover {
 	opacity: 87%;
 	transition: opacity 3s;
+}
+a {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+a:hover, a:focus {
+  color: var(--secondary-color);
+  text-decoration: underline;
+}
+/*slider switch css */
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+}
+.theme-switch-wrapper em {
+  margin-left: 10px;
+  font-size: 1rem;
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background-color: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background-color: #66bb6a;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
