--- a/data-bin/style.css
+++ b/data-bin/style.css
@@ -1,12 +1,14 @@
 :root {
-  --primary-color: #121212;
-  --secondary-color: #0be369;
-  --bg-color: #FFFFFF;
+	--primary-color: #121212;
+	--secondary-color: #0be369;
+	--bg-color: #FFFFFF;
+	--invert: 0;
 }
 [data-theme="dark"] {
-  --primary-color: #FFFFFF;
-  --secondary-color: #74499c;
-  --bg-color: #121212;
+	--primary-color: #FFFFFF;
+	--secondary-color: #74499c;
+	--bg-color: #121212;
+	--invert: 1;
 }
 html, body {
 	width: 100%;
@@ -39,7 +41,7 @@ canvas {
 	align-items: center;
 	padding: 20px 30px;
 	z-index: 2;
-	background: var(--bg-colour);
+	background-color: var(--bg-colour);
 	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 	transition: 0.3s;
 	text-align: center;
@@ -59,7 +61,7 @@ h1 {
 	height: 3vh;
 }
 .icon.black {
-	filter: invert(1)
+	filter: invert(var(--invert))
 }
 p {
 	font-size: 1em;
@@ -98,62 +100,62 @@ p {
 	transition: opacity 3s;
 }
 a {
-  color: var(--primary-color);
-  text-decoration: none;
+	color: var(--primary-color);
+	text-decoration: none;
 }
 a:hover, a:focus {
-  color: var(--secondary-color);
-  text-decoration: underline;
+	color: var(--secondary-color);
+	text-decoration: underline;
 }
-/*slider switch css */
+/* slider */
 .theme-switch-wrapper {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 .theme-switch-wrapper em {
-  margin-left: 10px;
-  font-size: 1rem;
+	margin-left: 10px;
+	font-size: 1rem;
 }
 
 .theme-switch {
-  display: inline-block;
-  height: 34px;
-  position: relative;
-  width: 60px;
+	display: inline-block;
+	height: 34px;
+	position: relative;
+	width: 60px;
 }
 
 .theme-switch input {
-  display: none;
+	display: none;
 }
 
 .slider {
-  background-color: #ccc;
-  bottom: 0;
-  cursor: pointer;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transition: .4s;
+	background-color: #ccc;
+	bottom: 0;
+	cursor: pointer;
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	transition: .4s;
 }
 
 .slider:before {
-  background-color: #fff;
-  bottom: 4px;
-  content: "";
-  height: 26px;
-  left: 4px;
-  position: absolute;
-  transition: .4s;
-  width: 26px;
+	background-color: #fff;
+	bottom: 4px;
+	content: "";
+	height: 26px;
+	left: 4px;
+	position: absolute;
+	transition: .4s;
+	width: 26px;
 }
 
 input:checked + .slider {
-  background-color: #66bb6a;
+	background-color: #66bb6a;
 }
 
 input:checked + .slider:before {
-  transform: translateX(26px);
+	transform: translateX(26px);
 }
 
 .slider.round {
