--- a/data-bin/style.css
+++ b/data-bin/style.css
@@ -34,6 +34,7 @@ canvas {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 }
 #content {
 	display: flex;
