--- a/data-bin/style.css
+++ b/data-bin/style.css
@@ -91,7 +91,7 @@ p {
 	opacity: 38%;
 }
 .secret-text {
-	/*align-self: flex-end;*/
+	align-self: flex-end;
 	color: var(--primary-color);
 	z-index: 3;
 	opacity: 0%;
@@ -102,12 +102,13 @@ p {
 	transition: opacity 3s;
 }
 a {
-	color: var(--primary-color);
-	text-decoration: none;
+	color: var(--secondary-color);
+	border-bottom: 1vh solid var(--secondary-color);
+	transition: border 2s;
 }
 a:hover, a:focus {
-	color: var(--secondary-color);
-	text-decoration: underline;
+	border-bottom: 0;
+	transition: border 2s;
 }
 /* slider */
 .theme-switch-wrapper {
