--- a/data-bin/style.css
+++ b/data-bin/style.css
@@ -57,6 +57,11 @@ h1 {
 	border-radius: 50%;
 	height: 12vh;
 	margin: 10px 0 15px 0;
+	transition: border 1s;
+}
+.avatar:hover, .avatar:focus {
+	border-radius: 25%;
+	transition: border 1s;
 }
 .icon {
 	height: 3vh;
