--- a/data-bin/style.css
+++ b/data-bin/style.css
@@ -57,11 +57,11 @@ h1 {
 	border-radius: 48%;
 	height: 12vh;
 	margin: 10px 0 15px 0;
-	border: 1px dotted var(--secondary-color);
+	border: 2px dotted var(--secondary-color);
 	transition: border 1s;
 }
 .avatar:hover, .avatar:focus {
-	border: 3px dotted var(--secondary-color);
+	border: 2px dotted var(--primary-color);
 	transition: border 1s;
 }
 .icon {
