--- a/NO/no.css
+++ b/NO/no.css
@@ -16,7 +16,7 @@ body {
 }
 .row {
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: center;
   height: 100%;
 }
