--- a/NO/no.css
+++ b/NO/no.css
@@ -7,7 +7,7 @@ html, body {
   height: 100%;
 }
 body {
-  background: linear-gradient(127deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+  background: linear-gradient(127deg, #ff2400, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
   background-size: 1800% 1800%;
   -webkit-animation: rainbow 60s ease infinite;
   -z-animation: rainbow 60s ease infinite;
