--- a/NO/no.css
+++ b/NO/no.css
@@ -7,12 +7,12 @@ html, body {
   height: 100%;
 }
 body {
-  background: linear-gradient(127deg, #ff2400, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
-  background-size: 1800% 1800%;
-  -webkit-animation: rainbow 60s ease infinite;
-  -z-animation: rainbow 60s ease infinite;
-  -o-animation: rainbow 60s ease infinite;
-  animation: rainbow 60s ease infinite;
+  background: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #003dfd, #05c7e6, #4bd58d);
+  background-size: 1200% 1200%;
+  -webkit-animation: rainbow 30s ease infinite;
+  -z-animation: rainbow 30s ease infinite;
+  -o-animation: rainbow 30s ease infinite;
+  animation: rainbow 30s ease infinite;
 }
 .row {
   display: flex;
@@ -33,30 +33,22 @@ h1 {
   font-size: 30vh;
 }
 @-webkit-keyframes rainbow {
-    0%{background-position:0% 0%}
-    40%{background-position:1800% 0%}
-    60%{background-position:1800% 1800%}
-    80%{background-position:0% 1800%}
-    100%{background-position:0% 0%}
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
 }
 @-moz-keyframes rainbow {
-    0%{background-position:0% 0%}
-    40%{background-position:1800% 0%}
-    60%{background-position:1800% 1800%}
-    80%{background-position:0% 1800%}
-    100%{background-position:0% 0%}
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
 }
 @-o-keyframes rainbow {
-    0%{background-position:0% 0%}
-    40%{background-position:1800% 0%}
-    60%{background-position:1800% 1800%}
-    80%{background-position:0% 1800%}
-    100%{background-position:0% 0%}
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
 }
 @keyframes rainbow { 
-    0%{background-position:0% 0%}
-    40%{background-position:1800% 0%}
-    60%{background-position:1800% 1800%}
-    80%{background-position:0% 1800%}
-    100%{background-position:0% 0%}
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
 }
