--- a/NO/no.css
+++ b/NO/no.css
@@ -1,4 +1,5 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+*{
   margin: 0;
   padding: 0;
   border: 0;
@@ -32,6 +33,7 @@ body {
 h1 {
   color: #ffffff;
   font-size: 30vh;
+  font-family: 'Anton', sans-serif;
 }
 audio {
   position: absolute;
