--- a/NO/no.css
+++ b/NO/no.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -33,7 +32,7 @@ body {
 h1 {
   color: #ffffff;
   font-size: 30vh;
-  font-family: 'Anton', sans-serif;
+  font-family: sans-serif;
 }
 audio {
   position: absolute;
