--- a/uzx/uzx-home.css
+++ b/uzx/uzx-home.css
@@ -1,1 +1,62 @@
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+html, body {
+  height: 100%;
+}
+body {
+  background: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #003dfd, #05c7e6, #4bd58d);
+  background-size: 1200% 1200%;
+  -webkit-animation: rainbow 10s ease infinite;
+  -z-animation: rainbow 10s ease infinite;
+  -o-animation: rainbow 10s ease infinite;
+  animation: rainbow 10s ease infinite;
+}
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.col {
+  flex: 1;
+  text-align: center;
+}
+@media (max-width: 400px) {
+  .flex-grid {
+    display: block;
+  }
+}
+h1 {
+  color: #ffffff;
+  font-size: 30vh;
+  font-family: sans-serif;
+}
+h3 {
+  color: #ffffff;
+  font-size: 10vh;
+  font-family: sans-serif;
+}
 
+@-webkit-keyframes rainbow {
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
+}
+@-moz-keyframes rainbow {
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
+}
+@-o-keyframes rainbow {
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
+}
+@keyframes rainbow { 
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
+}
