--- a/uzx/uzx-home.css
+++ b/uzx/uzx-home.css
@@ -24,7 +24,9 @@ h3 {
   font-size: 10vh;
   font-family: sans-serif;
 }
-
+.btn {
+  
+}
 @-webkit-keyframes rainbow {
   0% { background-position: 0% 50% }
   50% { background-position: 100% 50% }
