--- a/uzx/uzx-home.css
+++ b/uzx/uzx-home.css
@@ -25,6 +25,9 @@ h3 {
   font-family: sans-serif;
 }
 .btn {
+  background: rgb(222,0,92);
+  background: radial-gradient(circle, rgba(222,0,92,1) 0%, rgba(184,0,222,1) 50%, rgba(0,212,255,1) 100%);
+  font-size: 4vh;
   margin: 4vh;
 }
 @-webkit-keyframes rainbow {
