--- a/uzx/uzx-home.css
+++ b/uzx/uzx-home.css
@@ -31,8 +31,8 @@ h3 {
   border-radius: 2vh;
   font-size: 5vh;
   margin: 2vh;
-  margin-top: 4vh;
-  margin-bottom: 4vh;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
   padding: 1vh;
   transition-duration: 0.4s;
 }
