--- a/uzx/basic-grid.css
+++ b/uzx/basic-grid.css
@@ -2,6 +2,7 @@
 /* Feel free to use it, but make sure to credit me! */
 /* MIT licence applies */
 .row {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
