--- a/uzx/basic-grid.css
+++ b/uzx/basic-grid.css
@@ -25,3 +25,12 @@
     display: block;
   }
 }
+.wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.main {
+  flex: 1;
+}
