--- a/uzx/docs/docs.css
+++ b/uzx/docs/docs.css
@@ -1,1 +1,14 @@
+html, body {
+  height: 100%;
+}
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
 
+header, footer {
+  margin: 2vh;
+  color: #ffffff;
+  backgroun-color: #000000;
+}
