--- a/email-discord/basic-grid.css
+++ b/email-discord/basic-grid.css
@@ -1,6 +1,3 @@
-/* Basic grid library by EdazPotato */
-/* Feel free to use it, but make sure to credit me! */
-/* MIT licence applies */
 html, body {
   height: 100%;
 }
@@ -34,4 +31,7 @@ html, body {
   display: flex;
   min-height: 100%;
   flex-direction: column;
+}
+.hidden {
+  display: none;
 }
