--- a/data-bin/homepage.css
+++ b/data-bin/homepage.css
@@ -10,6 +10,10 @@
 	--bg-color: #121212;
 	--invert: 1;
 }
+#cookie-banner {
+	color: --primary-color: #FFFFFF;
+	background-color: --bg-color: #121212;
+}
 html, body {
 	width: 100%;
 	height: 100%;
