--- a/data-bin/homepage.css
+++ b/data-bin/homepage.css
@@ -28,7 +28,7 @@ canvas {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: #eb4d4b;
+	background-color: #c10000;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 50% 50%;
