--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,9 +1,9 @@
-:root[theme-color="dark"] {
+:root[darkness-mode="dark"] {
   --bg-color: #2C2F33;
   --title-text-color: #ffffff;
   --text-color: #ededed;
 }
-:root[theme-color="light"] {
+:root[darkness-mode="light"] {
   --bg-color: #ffffff;
   --title-text-color: #23272A;
   --text-color: #2C2F33;
