--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -14,6 +14,7 @@
   border: 0;
   color: var(--text-color);
   background-color: var(--bg-color);
+  transition-duration: 1s;
 }
 html, body, .container {
   height: 100%;
