--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -15,6 +15,7 @@
   color: var(--text-color);
   background-color: var(--bg-color);
   transition-duration: 1s;
+  font-family: arial;
 }
 html, body, .container {
   height: 100%;
