--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,4 +1,5 @@
 :root[darkness-mode="dark"] {
+  --darker-bg-color: #303437;
   --bg-color: #2C2F33;
   --title-text-color: #ffffff;
   --text-color: #ededed;
@@ -13,12 +14,13 @@
   margin: 0;
   border: 0;
   color: var(--text-color);
-  background-color: var(--bg-color);
+  /*background-color: var(--bg-color);*/
   transition: transform 0.1s;
   font-family: arial;
 }
 html, body, .container {
   height: 100%;
+  background-color: var(--bg-color);
 }
 #scripts {
   display: none
@@ -39,9 +41,9 @@ html, body, .container {
   font-size: 130%;
 }
 .card {
-  box-shadow: 4px 6px 6px 5px rgba(0,0,0,0.75);
-  background-color: var(--bg-color);
+  box-shadow: 17px 16px 1px -3px rgba(0,0,0,0.54);
+  background-color: var(--darker-bg-color);
   padding: 5%;
-  border-radius: 30px;
+  border-radius: 3px;
   transition-duration: 150ms;
 }
