change z-index of modal

--- a/data-bin/homepage.css
+++ b/data-bin/homepage.css
@@ -196,6 +196,7 @@ input:checked + .slider:before {
 /* based on https://gist.github.com/ghosh/4f94cf497d7090359a5c9f81caf60699 */
 .modal {
   font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
+  z-index: 500;
 }
 
 .modal__overlay {
