--- a/V3/styles.css
+++ b/V3/styles.css
@@ -14,6 +14,15 @@ html, body, #page {
 }
 
 #header {
-	height: 70%;
+	height: 100%;
 	background-color: #23272A;
+}
+
+.bounce-arrow {
+	color: #ffffff;
+	animation: bounce 2s linier infinite;
+}
+
+@keyframes bounce {
+	
 }
