--- a/V3/styles.css
+++ b/V3/styles.css
@@ -19,12 +19,12 @@ html, body {
 }
 
 #header {
-	height: 100%;
+	height: 100vh;
 	background-color: #23272A;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	flex-direction: column;
 }
 
 #arrow {
