--- a/V3/styles.css
+++ b/V3/styles.css
@@ -23,7 +23,7 @@ html, body {
 	height: 100vh;
 	background-color: #23272A;
 	display: flex;
-	flex-direction: column;
+	/*flex-direction: column;*/
 	align-items: center;
 	justify-content: center;
 }
