--- a/V3/styles.css
+++ b/V3/styles.css
@@ -20,7 +20,7 @@ html, body {
 }
 
 #header {
-	height: 100%;
+	height: 100vh;
 	background-color: #23272A;
 	display: flex;
 	flex-direction: column;
@@ -33,6 +33,7 @@ html, body {
 	height: 5%;
 	width: 5%;
 	justify-self: flex-end;
+	padding: 10%;
 }
 
 #content {
