--- a/V3/styles.css
+++ b/V3/styles.css
@@ -33,7 +33,8 @@ html, body {
 	height: 5%;
 	width: 5%;
 	justify-self: flex-end;
-	margin: 1%;
+	padding: 5%;
+	margin-top: auto;
 }
 
 #content {
