--- a/V3/styles.css
+++ b/V3/styles.css
@@ -43,10 +43,6 @@ html, body {
 	padding: 10%;
 }
 
-.bounce-arrow {
-	animation: bounce 2s linear infinite;
-}
-
 .hide {
 	opacity: 0;
 	/*visibility: hidden;*/
@@ -56,7 +52,8 @@ html, body {
 	transition: opacity 1s; 
 }
 
-@keyframes bounce {
-	0% {},
-	100% {}
+.avatar {
+	width: 50%;
+	height: 50%;
+	border-raidus: 25%;
 }
