--- a/V3/styles.css
+++ b/V3/styles.css
@@ -66,9 +66,9 @@ html, body {
 }
 
 .avatar {
-	width: 50%;
-	height: 50%;
-	border-raidus: 25;
+	width: 2vh;
+	height: 2vh;
+	border-raidus: 25px;
 }
 
 .bio {
