--- a/V3/styles.css
+++ b/V3/styles.css
@@ -15,6 +15,8 @@ noscript {
 html, body {
 	height: 100%;
 	width: 100%;
+	font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 }
 
 #page {
@@ -32,10 +34,10 @@ html, body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	font-size: 5vh;
+	/*font-size: 5vh;*/
 }
 h1 {
-	font-size: 10vh;
+	/*font-size: 10vh;*/
 }
 
 #arrow {
