--- a/V3/styles.css
+++ b/V3/styles.css
@@ -15,8 +15,9 @@ noscript {
 html, body {
 	height: 100%;
 	width: 100%;
-	font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
-	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+	/* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
+	font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300px)));
+	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300px)));
 }
 
 #page {
