--- a/V3/styles.css
+++ b/V3/styles.css
@@ -16,8 +16,8 @@ html, body {
 	height: 100%;
 	width: 100%;
 	/* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
-	font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300px)));
-	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300px)));
+	font-size: calc(20px + (30px - 20px) * ((100vw - 200px) / (2000px - 200px)));
+	line-height: calc(20px + (30px - 20px) * ((100vw - 200px) / (2000px - 200px)));
 }
 
 #page {
