--- a/V3/styles.css
+++ b/V3/styles.css
@@ -88,7 +88,7 @@ h1 {
 	color: #ffffff;
 }
 
-/* button background colors */
+/* buttons */
 .red {
 	background-color: hsla(1, 67%, 35%, 1);
 }
@@ -103,4 +103,7 @@ h1 {
 }
 .blue {
 	background-color: hsla(197, 98%, 46%, 1);
+}
+.button {
+	box-shadow: 27px 16px 0px 1px rgba(0,0,0,0.75);
 }
