--- a/V3/styles.css
+++ b/V3/styles.css
@@ -91,19 +91,22 @@ h1 {
 /* buttons */
 .red {
 	background-color: hsla(1, 67%, 35%, 1);
+	box-shadow: 10px 9px 0px 4px #951f1d;
 }
 .orange {
 	background-color: hsla(34, 100%, 47%, 1);
+	box-shadow: 10px 9px 0px 4px #f08800;
+	
 }
 .yellow {
 	background-color: hsla(61, 100%, 50%, 1);
+	box-shadow: 10px 9px 0px 4px #fbff00;
 }
 .green {
 	background-color: hsla(149, 89%, 43%, 1);
+	box-shadow: 10px 9px 0px 4px #0ccf6a;
 }
 .blue {
 	background-color: hsla(197, 98%, 46%, 1);
-}
-.button {
-	box-shadow: 27px 16px 0px 1px rgba(0,0,0,0.75);
+	box-shadow: 10px 9px 0px 4px #02a7e8;
 }
