--- a/V3/styles.css
+++ b/V3/styles.css
@@ -89,6 +89,9 @@ h1 {
 }
 
 /* buttons */
+.button {
+	border-radius: 5px;
+}
 .red {
 	background-color: hsla(1, 67%, 35%, 1);
 	box-shadow: 10px 9px 0px 4px #951f1d;
