--- a/V3/styles.css
+++ b/V3/styles.css
@@ -82,7 +82,9 @@ h1 {
 
 .bottom {
 	width: 100%;
-	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .avatar {
