--- a/V3/styles.css
+++ b/V3/styles.css
@@ -35,10 +35,11 @@ html, body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	font-size: 5vw;
+	font-size: 3vw;
 }
 #header h1 {
-	font-size: 7vh;*/
+	font-size: 7vh;
+	font-weight: bold;
 }
 
 #arrow {
@@ -88,8 +89,8 @@ html, body {
 }
 
 .avatar {
-	width: 20vw;
-	height: 20vw;
+	width: 23vw;
+	height: 23vw;
 	border-radius: 1000px;
 }
 
