--- a/V3/styles.css
+++ b/V3/styles.css
@@ -89,9 +89,10 @@ html, body {
 }
 
 .avatar {
-	width: 23vw;
-	height: 23vw;
+	width: 21vw;
+	height: 21vw;
 	border-radius: 1000px;
+	margin: 1vw;
 }
 
 .bio {
