--- a/V3/styles.css
+++ b/V3/styles.css
@@ -36,7 +36,7 @@ html, body {
 	align-items: center;
 	justify-content: center;
 	font-size: 2vw;
-	backgroundimage: url(https://apod.nasa.gov/apod/image/2008/trifidnebulaM20M21_1024.jpg);
+	background-image: url(https://apod.nasa.gov/apod/image/2008/trifidnebulaM20M21_1024.jpg);
 }
 #header h1 {
 	font-size: 6vh;
