--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -42,13 +42,12 @@ html, body, .container {
 }
 .card {
   box-shadow: 15px 16px 0px -3px rgba(0,0,0,0.54);
-  background-color: var(--darker-bg-color);
-  width: 30vh;
-  height: 10vh;
+  background-color: rgba(0,0,0,0.54);
   transition-duration: 250ms;
   cursor: pointer;
 }
 .card .txt {
   padding: 20px;
+  background-color: var(--darker-bg-color);
   white-space: nowrap;
 }
