--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -10,3 +10,14 @@
 html, body, .full-height {
   height: 100%;
 }
+
+#page {
+  display: flex;
+  flex-direction: row;
+}
+#sidebar {
+  width: 20vw;
+}
+#content {
+  width: 80wv;
+}
