--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -7,6 +7,7 @@
   border: 0;
   outline: 0;
   color: #304455;
+  font-family: Arial, Helvetica, sans-serif;
 }
 html, body, .full-height {
   height: 100%;
