--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -1,3 +1,8 @@
+:root {
+  --text-color: #304455;
+  --background-color: #ffffff;
+  --highlight-color: #00fff3;
+}
 #scripts {
   display: none;
 }
@@ -6,7 +11,7 @@
   margin: 0;
   border: 0;
   outline: 0;
-  color: #304455;
+  color: var(--text-color);
   font-family: Arial, Helvetica, sans-serif;
 }
 html, body, .full-height {
@@ -27,12 +32,12 @@ html, body, .full-height {
   flex-direction: column;
 }
 #sidebar-items a {
-  color: #304455;
+  color: var(--text-color);
   text-decoration: none;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid var(--background-color);
 }
 #sidebar-items a:hover, #sidebar-items a:focus {
-  border-bottom: 2px solid #00fff3;
+  border-bottom: 2px solid var(--highlight-color);
 }
 #content {
   width: 70wv;
