--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -39,7 +39,7 @@ html, body, .full-height {
 #sidebar-items a:hover, #sidebar-items a:focus {
   border-bottom: 2px solid var(--highlight-color);
 }
-#sidebar-items a:active {
+#sidebar-items a .active-link {
   color: var(--highlight-color);
 }
 #content {
