--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -2,6 +2,8 @@
   --text-color: #304455;
   --background-color: #ffffff;
   --highlight-color: #00fff3;
+  --normal-text-size: 1vw;
+  --big-text-size: 3vw;
 }
 #scripts {
   display: none;
@@ -13,6 +15,7 @@
   outline: 0;
   color: var(--text-color);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: var(--normal-text-size);
 }
 html, body, .full-height {
   height: 100%;
