--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -57,6 +57,6 @@ html, body, .full-height {
 #content article {
   display: none;
 }
-#content article .active {
-  display: flex;
+.active {
+  display: block !important;
 }
